Adding Printable Lecture 1 Notes. Also updating CSS for dynamic example numbering.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "binom",
         "Chebyshev's",
         "dontprint",
+        "ethnicities",
         "Gebra",
         "hideprint",
         "Lipitor",
